--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ravikant Singh",
+  "author": "Trong Phuc Judoit",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
